see https://github.com/SUSE/doc-susemanager/pull/622/ (prep'ed
by lana)

--- a/modules/administration/pages/public-cloud.adoc
+++ b/modules/administration/pages/public-cloud.adoc
@@ -136,6 +136,9 @@ If you experience errors during setup, start a new instance, and begin the setup
 If you receive a message that there is not enough space available for setup, ensure that your root volume is at least 20 GB and double check that the instructions in <<using-separate-storage-volume>> have been completed correctly.
 
 // REMARK check this; will it still work for sle 15?
+////
+Commented out per https://github.com/SUSE/spacewalk/issues/8951 LKB 2019-08-06
+
 {productname} Server for the public cloud comes with a bootstrap data module pre-installed.
 The bootstrap module contains optimized package lists for bootstrapping instances started from {sle} images published by {suse}.
 If you intend to register such an instance, when you create the bootstrap repository run the [command]``mgr-create-bootstrap-repo`` script using this command, to create a bootstrap repository suitable for {sle} 12 SP1 instances.
@@ -146,6 +149,7 @@ $ mgr-create-bootstrap-repo --datamodule=mgr_pubcloud_bootstrap_data -c SLE-12-S
 
 
 See xref:client-configuration:creating-a-tools-repository.adoc[] for more information on bootstrapping.
+////
 
 Prior to registering instances started from on demand images remove the following packages from the instance to be registered:
 ... cloud-regionsrv-client
