remove more webui

--- a/modules/administration/pages/public-cloud.adoc
+++ b/modules/administration/pages/public-cloud.adoc
@@ -217,7 +217,7 @@ to configure your {productname} Proxy instance.
 [replaceable]``Instance-ID``
 |
 
-[replaceable]``Instance-Name``**-suma-webui**
+[replaceable]``Instance-Name``**-suma**
 |===
 +
 The current value for the [replaceable]``Instance-ID`` or [replaceable]``Instance-Name`` in case of the Azure Cloud, can be obtained from the public cloud Web console or from within a terminal session as follows:
