--- a/modules/salt/pages/salt-calls.adoc
+++ b/modules/salt/pages/salt-calls.adoc
@@ -1,121 +1,116 @@
 [[salt.calls]]
 = Salt Calls
 
-
-
-Salt Calls::
-Salt calls are defined by three main properties:
-+
-
+Salt calls have three main components: target, function, and arguments.
+The calls are constructed in this format:
 ----
 salt 'target' <function> [arguments]
 ----
 
-Target:::
-Use the second property in a Salt call to target a single machine or group of machines.
-Specify the client or group of clients you would like to run a function on.
+The target defines the client, or group of clients, on which to run the function.
 
-General Targeting::::
+The function is the particular task to be run.
+
+Arguments provide any extra data required by the function.
+
+
+== Salt Call Targets
+
+Salt call targets allow you to specify a client or group of clients.
+There are several different targets you can use.
+
+General Targeting::
+
 List available grains on all clients:
-+
-
 ----
 salt '*' grains.ls
 ----
-+
-Ping a specific client:
-+
 
+Target a specific client:
 ----
 salt 'web1.example.com' test.ping
 ----
-Glob Targeting::::
-Ping all clients using a domain:
-+
 
+Glob Targeting::
+
+Target all clients using a particular domain:
 ----
 salt '*example.com' test.ping
 ----
-+
-Display the OS name of all clients with the ``webserver`` label:
-+
 
+Target all clients using a particular label:
 ----
-salt 'webserver*' grains.item oscodename
+salt 'label*' test.ping
 ----
-List Targeting::::
-+
 
-----
-salt -L 'webserver.example.com,db.example.com' test.ping
-----
-Regular Expression Targeting::::
-You may use PCRE-compliant regular expressions:
-+
+List Targeting::
 
+Specify a flat list of clients, using their IDs:
+----
+salt -L 'client_ID1, client_ID2, client_ID3' test.ping
+----
+
+Regular Expression Targeting::
+
+You can also define targets with PCRE-compliant regular expressions:
 ----
 salt -E '(?!web)' test.ping
 ----
-IP Address Targeting::::
-List client IP addresses:
-+
 
+IP Address Targeting::
+
+List available client IP addresses:
 ----
 salt '*' network.ip_addrs
 ----
-+
-Ping a specific client IP address:
-+
 
+Target a specific client IP address:
 ----
 salt -S '172.31.60.74' test.ping
 ----
-+
-Ping all clients on a subnet:
-+
 
+Target all clients on a subnet:
 ----
 salt -S 172.31.0.0/16 test.ping
 ----
-+
 
-.Lookup a Subnet Using the [command]``ip`` Command
-[TIP]
-====
+////
+This is general Linux info, not specific to the topic.
 You can use the [command]``ip`` command to find the subnet mask in the format of ``192.168.1.1/24``:
 
 ----
 ip -o -f inet addr show | awk '/scope global/ {print $4}'
 ----
-====
+////
 
-+
+For more on targeting, see https://docs.saltstack.com/en/latest/topics/targeting/.
 
-Function::
-Once you have specified a target, provide the function you would like to call.
-Functions also accept arguments.
-Arguments are space-delimited, for example:
-+
 
-----
-salt '*' cmd.run 'echo "Hello: $FIRST_NAME"' env='{FIRST_NAME: "John"}'
-----
 
-Locating Additional Minion Functions:::
-Find more functions which can be called on clients by running:
-+
+== Salt Call Functions
 
+When you have specified a target, provide the function to call on the target.
+
+Find which functions can be called on the target:
 ----
 salt '*' sys.doc
 ----
-+
+
 For a full list of callable functions, see https://docs.saltstack.com/en/latest/ref/modules/all/index.html
 
-Arguments:::
-Provides the extra data needed by a function you are calling.
-The command [command]``pkg.install`` requires an argument specifying a package to install. {yast} has been selected for installation, for example:
-+
 
+
+== Salt Call Arguments
+
+Functions accept arguments for any extra data.
+
+For example, the [command]``pkg.install`` function requires an argument specifying which package to install:
 ----
 salt '*' pkg.install yast2
+----
+
+You can provide more than one argument to a function, with spaces between them.
+For example:
+----
+salt '*' cmd.run 'echo "Hello: $FIRST_NAME"' env='{FIRST_NAME: "John"}'
 ----
