--- a/modules/salt/pages/salt-commands.adoc
+++ b/modules/salt/pages/salt-commands.adoc
@@ -2,58 +2,46 @@
 = Salt Commands
 
 
-This section shows useful Salt commands.
+This section contains the most used Salt commands.
+
+For a complete list of available Salt commands, see https://docs.saltstack.com/en/latest/ref/cli/index.html.
+
 
 salt-run::
-Print a list of all clients that are up:
-+
-
+Display all clients that are running:
 ----
 salt-run manage.up
 ----
-+
-Print a list of all clients that are down:
-+
 
+Display all clients that are not running:
 ----
 salt-run manage.down
 ----
-+
-Print a list with the current status of all Salt clients:
-+
 
+Display the current status of all Salt clients:
 ----
 salt-run manage.status
 ----
-+
-Check the version of Salt running on the master and active clients:
-+
 
+Check the version of Salt running on the {productname} Server and active clients:
 ----
 salt-run manage.versions
 ----
 
 salt-cp::
 Copy a file to a client or set of clients.
-+
-
 ----
 salt-cp '*' foo.conf /root
 ----
-+
-For more information, see https://docs.saltstack.com/en/latest/ref/cli/salt-cp.html.
 
 salt-key -l::
 List public keys:
-+
-
 ----
 salt-key -l
 ----
+
 salt-key -A::
 Accept all pending keys:
-+
-
 ----
 salt-key -A
 ----
