--- a/modules/salt/pages/salt-terminology.adoc
+++ b/modules/salt/pages/salt-terminology.adoc
@@ -45,7 +45,7 @@ Pillars are created on the {productname} Server.
 They contain information about a client or group of clients.
 
 Pillars allow you to send confidential information to a targeted client or group of clients.
-Pillars are useful for sensitive data, configuration of clients, variables, and any arbitrary data which should be defined.
+Pillars are useful for sensitive data, configuration of clients, variables, and any arbitrary data.
 
 For more information on pillars, see https://docs.saltstack.com/en/latest/topics/tutorials/pillar.html.
 
