--- a/modules/salt/pages/salt-calls.adoc
+++ b/modules/salt/pages/salt-calls.adoc
@@ -96,7 +96,7 @@ Find which functions can be called on the target:
 salt '*' sys.doc
 ----
 
-For a full list of callable functions, see https://docs.saltstack.com/en/latest/ref/modules/all/index.html
+For a full list of callable functions, see https://docs.saltstack.com/en/latest/ref/modules/all/index.html.
 
 
 
