--- a/modules/salt/pages/salt-states.adoc
+++ b/modules/salt/pages/salt-states.adoc
@@ -43,7 +43,7 @@ Within that directory, each organization has a sub-directory.
 │   │    ... files needed by states (uploaded by users)...
 │   └── state.sls
          ... other SLS files (created by users)...
-E.g.:
+For example:
 ├── manager_org_TESTING
 │   ├── files
 │   │   └── motd     # user created
