--- a/modules/administration/pages/public-cloud-azure.adoc
+++ b/modules/administration/pages/public-cloud-azure.adoc
@@ -16,10 +16,10 @@ When you create your Azure virtual machine, choose the `B2ms` size.
 The `B2ms` VM contains:
 
 * 2 vCPUs
-* 8 GB RAM
+* 8{nbsp}GB RAM
 * Up to 4 data disks
 * Max IOPS 2400
-* Temporary storage disk of 16Gb.
+* Temporary storage disk of 16{nbsp}GB.
 
 Data on this disk will be destroyed after the guest has been switched off.
 
@@ -82,7 +82,7 @@ Configure the {productname} Server to use the internal IP address `10.0.0.4`.
 Ensure it is accessible from outside the network with IP `10.89.171.101`.
 
 Configure the firewall to only allow inbound traffic on ports `22`, `80`, and `443` to IP Address `10.0.0.4`.
-In this environment, if other servers are added to the network they can not be reached from outside the network.
+In this environment, if other servers are added to the network they cannot be reached from outside the network.
 
 Outbound is open from the private network.
 // REMARK: Was does this mean?
@@ -115,7 +115,7 @@ service postgresql status
 ----
 
 Complete {productname} Server installation and configuration.
-For more information, see xref:installation:server-setup.adoc[]
+For more information, see xref:installation:server-setup.adoc[].
 
 We recommend you configure the {productname} Server so that DHCP does not set the host name.
 Check [path]``/etc/sysconfig/network/dhcp`` and ensure that `DHCLIENT_SET_HOSTNAME` is set to [literal]``no``:
