--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -43,7 +43,8 @@ The branch server can operate in several different network configurations:
 * The branch server shares a network with the terminals, and provides a connection to the {susemgr} server.
   In this configuration, the branch server is not required to manage a network (DHCP and DNS services), but acts as a PXE boot server and provides FTP and TFTP services.
 
-For more information on {smr} Branch servers, see documentation on {susemgr} Proxy servers (xref:installation/install-proxy-unified.adoc[]).
+{smr} Branch servers are implemented as enhanced {susemgr} Proxy servers.
+For technical background information on {smr} Branch servers, see also the documentation on {susemgr} Proxy servers (xref:installation/install-proxy-unified.adoc[]).
 
 
 
