Formulas section, broken up and edited to L444

--- a/modules/salt/nav-salt-guide.adoc
+++ b/modules/salt/nav-salt-guide.adoc
@@ -9,7 +9,9 @@ ifndef::backend-pdf[]
 ** xref:salt-states.adoc[Salt States]
 ** xref:salt-file-locations.adoc[File Locations]
 ** xref:salt-formulas.adoc[Salt Formulas]
-** xref:salt-example-formula.adoc[Example Formula]
+*** xref:salt-formulas-standard.adoc[Standard Formulas]
+*** xref:salt-formulas-custom.adoc[Custom Formulas]
+*** xref:salt-example-formula.adoc[Example Custom Formula]
 ** xref:salt-ssh.adoc[SSH Integration]
 ** xref:salt-rate-limiting.adoc[Rate Limiting]
 ** xref:large-scale.adoc[Scaling Salt Minions]
@@ -42,7 +44,11 @@ include::modules/salt/pages/salt-file-locations.adoc[leveloffset=+1]
 
 include::modules/salt/pages/salt-formulas.adoc[leveloffset=+1]
 
-include::modules/salt/pages/salt-example-formula.adoc[leveloffset=+1]
+include::modules/salt/pages/salt-formulas-standard.adoc[leveloffset=+2]
+
+include::modules/salt/pages/salt-formulas-custom.adoc[leveloffset=+2]
+
+include::modules/salt/pages/salt-example-formula.adoc[leveloffset=+2]
 
 include::modules/salt/pages/salt-ssh.adoc[leveloffset=+1]
 
