--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -24,6 +24,7 @@ This can include database entries of registered systems, Salt pillar data for im
 
 Build hosts can be arbitrary servers or virtual machines.
 They are used to securely build operating system images.
+// REMARK: Check version number
 Build hosts should be based on {sls}{nbsp}12 SP3 or SP4.
 
 
@@ -57,9 +58,10 @@ Every terminal, however, is provided by a vendor, who set basic information abou
 
 In most cases, different terminals will require a different operating system (OS) image to ensure they work correctly.
 For example, an information kiosk has a high-resolution touchscreen, where a cashier terminal might only have a very basic display.
-While both of these terminals require similar processing and network functionality, they will require different OS images to ensure that the different display mechanisms work correctly.
+While both of these terminals require similar processing and network functionality, they will require different OS images.
+The OS images ensure that the different display mechanisms work correctly.
 
-The minimum memory requirement is 1024 MB for hosts that need to run OS images built with Kiwi (PXE booted or not)
+The minimum memory requirement is 1 GB for hosts that need to run OS images built with Kiwi (PXE booted or not).
 
 *Hardware Requirements for PoS Terminals:*
 . At least 1 GB of RAM.
@@ -86,7 +88,8 @@ For more information on EFI in the Saltboot formula, see xref:retail:retail-form
 
 Because every environment is different, and can contain many different configurations of many different terminals, {smr} uses hardware types to simplify device management.
 
-Hardware types allow you to group devices according to manufacturer and device name, so that all devices of a particular type can be managed as one.
+Hardware types allow you to group devices according to manufacturer and device name.
+Then all devices of a particular type can be managed as one.
 
 
 
@@ -111,4 +114,5 @@ For more information about formulas, see xref:retail:retail-formulas.adoc[].
 {smr} uses system groups to organize the various devices in your environment.
 
 Each branch requires a system group, containing a single branch server, and the PoS terminals associated with that server.
-Each system group is identified with a Branch ID, which is used in formulas and scripts to automatically update the entire group.
+Each system group is identified with a Branch ID.
+The Branch ID is used in formulas and scripts to automatically update the entire group.
