--- a/modules/retail/pages/retail-install.adoc
+++ b/modules/retail/pages/retail-install.adoc
@@ -3,5 +3,6 @@
 
 {smr} can be installed in various ways depending on individual needs.
 
-For the initial package installation, we recommend using the {slsa} Unified Installer, however it is also possible to install manually from packages.
+For the initial package installation, we recommend using the {slsa} Unified Installer.
+However, it is also possible to install {smr} manually from packages.
 Both methods are described in this manual.
