Use correct character for bullet points, remove the illegal punctuation

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -37,14 +37,15 @@ You can select the order of the environments in the lifecycle by selecting an en
 == Advanced: Filter types
 {productname} allows you to create various types of filters to control the content on project build. Below is the list of supported filters:
 
-- package filtering:
-  - by name,
-  - by name, epoch, version, release and architecture.
-- patch filtering:
-  - by advisory name,
-  - by synopsis,
-  - by date,
-  - by affected package.
+* package filtering
+** by name
+** by name, epoch, version, release and architecture
+* patch filtering
+** by advisory name
+** by synopsis
+** by date
+** by affected package
+** by type
 
 === Filter ``rule`` parameter
 Moreover, each filter has ``rule`` parameter set to either ``Allow`` or ``Deny`` value. The filters are processed as follows:
