Note about no dependency solving on filtering

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -47,6 +47,11 @@ You can select the order of the environments in the lifecycle by selecting an en
 ** by affected package
 ** by type
 
+[NOTE]
+====
+No package dependency solving is done on content filtering.
+====
+
 === Filter ``rule`` parameter
 Moreover, each filter has ``rule`` parameter set to either ``Allow`` or ``Deny`` value. The filters are processed as follows:
 - if a package or patch satisfies a ``Deny`` filter, it will be excluded from the result,
