--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -55,7 +55,7 @@ No package dependency solving is done on content filtering.
 === Filter ``rule`` parameter
 Moreover, each filter has ``rule`` parameter set to either ``Allow`` or ``Deny`` value. The filters are processed as follows:
 - if a package or patch satisfies a ``Deny`` filter, it will be excluded from the result,
-- if a package or patch satisfies an ``Allow`` filter, it will be included in the result (even if it was excluded a ``Deny`` filter).
+- if a package or patch satisfies an ``Allow`` filter, it will be included in the result (even if it was excluded by a ``Deny`` filter).
 
 This behavior is useful when you want to exclude large number of packages or patches using a general ``Deny`` filter and "cherry-pick" specific packages or patches with specific ``Allow`` filters.
 
