--- a/modules/retail/pages/retail-requirements.adoc
+++ b/modules/retail/pages/retail-requirements.adoc
@@ -2,20 +2,20 @@
 = Requirements
 
 Before you install {smr}, ensure your environment meets the minimum requirements.
-This section lists the requirements for your {smr} installation.
+This section lists the requirements for a {smr} installation.
 These requirements are in addition to the {susemgr} requirements listed at
 xref:installation:general-requirements.adoc[].
 
 [IMPORTANT]
 ====
-{smr} is only supported on {x86_64} architecture.
+{smr} is only supported on the {x86_64} architecture.
 ====
 
 
-.{susemgr} server requirements
+.{susemgr} Server Requirements
 
 [cols="1,1", options="header"]
-.Hardware Requirements for {susemgr} server
+.Hardware Requirements for {susemgr} Server
 |===
 | Hardware                 | Recommended
 | CPU                      | Multi-core 64-bit CPU
@@ -25,12 +25,12 @@ xref:installation:general-requirements.adoc[].
 | Disk Space:              | [path]``/`` _(root)_ 100{nbsp}GB
 |                          | [path]``/var/lib/pgsql`` Minimum 50{nbsp}GB
 |                          | [path]``/srv/`` 50{nbsp}GB (Minimum 2{nbsp}GB per OS image)
-|                          | [path]``/var/spacewalk`` Minimum 50{nbsp}GB per SUSE product and 360{nbsp}GB per Red Hat product
+|                          | [path]``/var/spacewalk`` Minimum 50{nbsp}GB per {suse} product and 360{nbsp}GB per Red Hat product
 |===
 
-.Build host requirements
+.Build Host Requirements
 
-.Hardware requirements for build host
+.Hardware Requirements for Build Host
 |===
 | Hardware                 | Recommended
 | CPU                      | Multi-core 64-bit CPU
@@ -39,21 +39,21 @@ xref:installation:general-requirements.adoc[].
 |===
 
 
-.Branch server requirements
+.Branch Server Requirements
 
-.Hardware requirements for branch server
+.Hardware Requirements for Branch Server
 |===
 | Hardware                 | Recommended
 | CPU                      | Multi-core 64-bit CPU
 | RAM:                     | 8{nbsp}GB
-| Disk Space:              | [path]``/`` _(root)_ 100{nbsp}GB (Minimum 50{nbsp}GB per SUSE product and 2{nbsp}GB per OS image)
+| Disk Space:              | [path]``/`` _(root)_ 100{nbsp}GB (Minimum 50{nbsp}GB per {suse} product and 2{nbsp}GB per OS image)
 |===
 
 
 .Network Requirements
 
-* The {susemgr} server requires a reliable and fast WAN connection
-* The branch server requires a reliable WAN connection, to reach the {susemgr} server
-* If you are using a shared network, ensure that DHCP requests are filtered before reaching the rest of your shared network
+* The {susemgr} Server requires a reliable and fast WAN connection.
+* The branch server requires a reliable WAN connection, to reach the {susemgr} Server.
+* If you are using a shared network, ensure that DHCP requests are filtered before reaching the rest of your shared network.
 * If you are using a dedicated network, the branch server requires at least two network interfaces: one connected to the WAN with reachable {susemgr} server, and one connected to the internal branch LAN.
 * Terminals require a LAN connection to the branch server network.
