--- a/modules/retail/pages/retail-install.adoc
+++ b/modules/retail/pages/retail-install.adoc
@@ -6,3 +6,4 @@
 For the initial package installation, we recommend using the {slsa} Unified Installer.
 However, it is also possible to install {smr} manually from packages.
 Both methods are described in this manual.
+// REMARK: ATM, the second method is disabled; cf. the jeos installation that here will probably work as well
