--- a/modules/retail/pages/retail-install-unified.adoc
+++ b/modules/retail/pages/retail-install-unified.adoc
@@ -2,18 +2,18 @@
 = Installing with the Unified Installer
 
 {smr} 4.0 is a {suse} base product.
-This section describes how to install {smr} from {sls} installation media.
+This section describes how to install {smr} from {sls} installation media with the Unified Installer.
 It assumes you have already registered the {susemgr} product with the {scc} and have a registration code.
 
 For information on registering with {scc}, or obtaining installation media, see xref:installation:general-requirements.adoc[].
 
 
 
-.Procedure: Installing {susemgr} Server from a DVD image
+.Procedure: Installing {susemgr} Server from a DVD Image
 
-. Boot your server from the installation image, you might need to adjust the boot order in the BIOS.
+. Boot your server from the installation image.
+In case of trouble, you might need to adjust the boot order in the BIOS.
 . When prompted, select [guimenu]``Installation``.
-+
 . In the [guimenu]``Language, Keyboard and Product Selection`` screen, check the [guimenu]``SUSE Manager Server`` checkbox, and click btn:[Next].
 +
 image::unifiedinstaller-install.png[scaledwidth=80%]
@@ -38,15 +38,15 @@ Review the settings and click btn:[Install].
 yast susemanager_setup
 ----
 . Follow the prompts to set up your account.
-Ensure you take note of the passwords you set, you will need them later on. 
+Ensure you take note of the passwords you set, you will need them later on.
 
 
 
-.Procedure: Installing {susemgr} Branch Server from a DVD image
+.Procedure: Installing {susemgr} Branch Server from a DVD Image
 
-. Boot your server from the installation image, you might need to adjust the boot order in the BIOS.
+. Boot your server from the installation image.
+In case of trouble, you might need to adjust the boot order in the BIOS.
 . When prompted, select [guimenu]``Installation``.
-+
 . In the [guimenu]``Language, Keyboard and Product Selection`` screen, check the [guimenu]``SUSE Manager Retail Branch Server`` checkbox, and click btn:[Next].
 . Read and agree to the End User Licence Agreement, and click btn:[Next].
 . In the [guimenu]``Registration`` screen, check the [guimenu]``Register System via scc.suse.com`` checkbox, enter your {scc} credentials, and click btn:[Next].
@@ -61,7 +61,8 @@ Review the settings and click btn:[Install].
 
 
 
-When the installation procedure has finished, you can check that you have all the required modules by using the [command]``SUSEConnect --status-text`` command at a command prompt.
+When the installation procedure has finished, you can check that all the required modules are added.
+Use the [command]``SUSEConnect --status-text`` command at a command prompt.
 For {smr}, the expected modules are:
 
 * {sls} Basesystem Module
