--- a/modules/retail/pages/retail-install.adoc
+++ b/modules/retail/pages/retail-install.adoc
@@ -4,6 +4,8 @@
 {smr} can be installed in various ways depending on individual needs.
 
 For the initial package installation, we recommend using the {slsa} Unified Installer.
-However, it is also possible to install {smr} manually from packages.
-Both methods are described in this manual.
 // REMARK: ATM, the second method is disabled; cf. the jeos installation that here will probably work as well
+// REMARK: Shall we enable retail-install-packages.adoc again?  Or better use jeos?
+// REMARK: For the moment, commenting the following misleading sentences:
+// However, it is also possible to install {smr} manually from packages.
+// Both methods are described in this manual.
