--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -5,9 +5,9 @@ When you have installed the [guimenu]``SUSE Manager for Retail Server`` and the 
 
 . Install the build host and register it to {susemgr}
 . Configure the build host
-. Create required system group
+. Create the required system group
 
-Branch server setup steps:
+These are the branch server setup steps:
 
 // already done:
 // . Install the branch server and register it to {susemgr}
@@ -23,9 +23,9 @@ Cobbler is not currently supported within {smr} environments.
 If you intend to use your installation with {smr} formulas, do not configure Cobbler.
 ====
 
-== Install the build host and register it to {susemgr}
+== Install the Build Host and Register It to {susemgr}
 
-Your build host should be a Salt client, running {sls}{nbsp}12 SP3 or SP4 for building {sls} 12 images (SP4 recommended).
+Your build host must be a Salt client, running {sls}{nbsp}12 SP3 or SP4 for building {sls} 12 images (SP4 recommended).
 For instructions to install Salt clients, see xref:client-configuration:manual-registration-overview.adoc[].
 
 [WARNING]
@@ -36,14 +36,14 @@ Do not install the build host as a traditionally managed client.
 
 
 
-== Configure the build host
+== Configure the Build Host
 
 The build host must be set as an OS Image build host in the {susemgr} {webui}, and highstate applied.
 
-.Procedure: Configuring the build host
+.Procedure: Configuring the Build Host
 
 . In the {susemgr} {webui}, navigate to menu:Systems[Overview].
-Locate the system to be made a build host, and click on its name.
+Locate the system to be made a build host, and click its name.
 . In the [guimenu]``System Properties`` window, click btn:[Edit These Properties].
 . In the [guimenu]``Edit System Details`` window, ensure the [guimenu]``OS Image Build Host`` option is checked, and click btn:[Update Properties] to save your changes.
 . Select the [guimenu]``States`` tab, and navigate to the [guimenu]``Highstate`` window.
@@ -53,15 +53,15 @@ Locate the system to be made a build host, and click on its name.
 ====
 Check that the build host has these packages installed after you have run Highstate:
 
-- kiwi
-- kiwi-desc-saltboot
+* [package]``kiwi``
+* [package]``kiwi-desc-saltboot``
 
 If any package is missing, make sure the ``SUSE Manager Tools`` repository is available on the build host and install any missing packages manually using ``zypper install``.
 ====
 
 
 
-== Create required system groups
+== Create Required System Groups
 
 {smr} requires system groups for terminals and servers.
 Manually create these system groups during installation:
@@ -72,16 +72,16 @@ Manually create these system groups during installation:
 Additionally, you will need to create a system group for each branch server, and each terminal hardware type in your environment.
 
 You can create system groups using the {susemgr} {webui}.
-Navigate to menu:Systems[System Groups] and click on btn:[Create System Group].
+Navigate to menu:Systems[System Groups] and click btn:[Create System Group].
 
 For more information about system groups, see xref:reference:systems/system-groups.adoc[].
 
 
 
 [[retail.sect.install.branch]]
-== Install the branch server and register it to {susemgr}
+== Install the Branch Server and Register It to {susemgr}
 
-Your branch server should be a Salt client, running {susemgrproxy} 4.0.
+Your branch server must be a Salt client, running {susemgrproxy} 4.0.
 With a limited feature set, {susemgrproxy} 3.2 is also possible.
 
 [WARNING]
@@ -91,7 +91,7 @@ Do not install the branch server as a traditionally managed client.
 
 For instructions to install Salt-based proxy clients and register them to {susemgr}, see xref:installation:install-proxy-unified.adoc[].
 
-The activation key should have the following channels, pools and respective updates:
+The activation key should have the following channels, pools, and respective updates:
 
 ----
 - SUSE Manager Retail Branch Server 4.0 x86_64
@@ -107,7 +107,9 @@ For mass deployments, see xref:retail:retail-mass-config.adoc[].
 When you are installing the branch server with a dedicated internal network, check that you are using the same fully qualified domain name (FQDN) on both the external and internal branch networks.
 If the FQDN does not match on both networks, the branch server will not be recognized as a proxy server.
 
-== Assign and configure branch server formulas
+
+
+== Assign and Configure Branch Server Formulas
 
 Before you configure the branch server, ensure you have decided on networking topology, and know the Salt ID of the branch server.
 
@@ -115,7 +117,7 @@ The branch server can be configured automatically using the [command]``retail_br
 If you prefer to manually configure the branch server, you can do so using formulas.
 For more information about formulas, see xref:retail:retail-formulas.adoc[].
 
-.Procedure: Configuring branch server formulas using helper script
+.Procedure: Configuring Branch Server Formulas Using Helper Script
 
 . Branch server configuration is performed using the [command]``retail_branch_init`` command:
 +
@@ -123,7 +125,8 @@ For more information about formulas, see xref:retail:retail-formulas.adoc[].
 retail_branch_init <branch_server_salt_id>
 ----
 +
-This command will configure branch server formulas with recommended values. You can use the [command]``retail_branch_init --help`` command for additional options.
+This command will configure branch server formulas with recommended values.
+You can use the [command]``retail_branch_init --help`` command for additional options.
 . Verify that your changes have been configured correctly by checking the {susemgr} {webui} branch server system formulas.
 . Apply highstate on the branch server.
 You can do this through the {webui}, or by running this command:
@@ -134,12 +137,12 @@ salt <branch_server_salt_id> state.apply
 
 
 
-== Synchronize images to the branch servers
+== Synchronize Images to the Branch Servers
 
 The OS image you use on the {susemgr} server must be synchronized for use on the branch server.
 You can do this with the Salt [command]``image-sync`` tool.
 
-.Procedure: Synchronize images with branch server
+.Procedure: Synchronize Images with Branch Server
 
 . On the {susemgr} server, run this command:
 +
@@ -149,7 +152,8 @@ salt <branch_server_salt_id> state.apply image-sync
 . The image details will be transferred to [path]``/srv/saltboot`` on the branch server.
 
 
-== Terminals based on {slsa}{nbsp}11 SP{nbsp}3
+
+== Terminals Based on {slsa}{nbsp}11 SP{nbsp}3
 
 POS Terminals based on {sls}{nbsp}11 SP{nbsp}3 can be deployed in much the same way as other terminals, with a few differences.
 
