--- a/modules/retail/pages/retail-formulas-intro.adoc
+++ b/modules/retail/pages/retail-formulas-intro.adoc
@@ -3,7 +3,6 @@
 
 
 Formulas are pre-written Salt states, that are used to configure your {smr} installation.
-
 This section lists the primary formulas shipped with {smr} and their configuration options.
 
 All the formulas in this section must be accurately configured for your {smr} installation to function correctly.
@@ -11,7 +10,7 @@ If you are unsure of the correct formula configuration details, run the [command
 You can then manually edit the formulas as required.
 
 
-.State and formula name collisions
+.State and Formula Name Collisions
 [IMPORTANT]
 ====
 If a formula uses the same name as an existing Salt state, the two names will collide, and could result in the formula being used instead of the state.
@@ -19,4 +18,5 @@ Always check the names of states and formulas to avoid name collisions.
 ====
 
 Most formulas can be updated using the {susemgr} {webui}.
-Once you have made changes to your formula, ensure you apply the highstate to propagate your changes to the appropriate services.
+When you have made changes to your formula, ensure you apply the highstate.
+With the highstate you propagate your changes to the appropriate services.
