--- a/modules/retail/pages/retail-formula-bind.adoc
+++ b/modules/retail/pages/retail-formula-bind.adoc
@@ -4,7 +4,7 @@
 The Bind formula is used to configure the Domain Name System (DNS) on the branch server.
 POS terminals will use the DNS on the branch server for name resolution of saltboot specific hostnames.
 
-When you are configuring the bind formula for a branch server with a dedicated internal network, check that you are using the same fully qualified domain name (FQDN) on both the external and internal branch networks.
+When you are configuring the Bind formula for a branch server with a dedicated internal network, check that you are using the same fully qualified domain name (FQDN) on both the external and internal branch networks.
 If the FQDN does not match on both networks, the branch server will not be recognized as a proxy server.
 
 [NOTE]
@@ -21,12 +21,13 @@ Zone 2 is the reverse zone of Zone 1.
 Its main purpose is to resolve IP addresses back to hostnames.
 Zone 2 is primarily needed for the correct determination of the FQDNs of the branch.
 
-
+// REMARK: this procedure is probably too long.  Where to split?
+// REMARK: are these list items (`*`) substeps?  Or what?  Confusing.
 .Procedure: Configuring Bind with Two Zones
 
-. Check the [systemitem]``Bind`` formula, click [btn]``Save``, and navigate to the menu:Formulas[Bind] tab
+. Check the [systemitem]``Bind`` formula, click [btn]``Save``, and navigate to the menu:Formulas[Bind] tab.
 . In the [guimenu]``Config`` section, select [systemitem]``Include Forwarders``.
-. In the [guimenu]``Configured Zones`` section, use these parameters for Zone 1:
+. In the [guimenu]``Configured Zones`` section, use these parameters for Zone 1:
 * In the [guimenu]``Name`` field, enter the domain name of your branch network  (for example: [systemitem]``branch1.example.com``).
 * In the [guimenu]``Type`` field, select [systemitem]``master``.
 . Click [btn]``Add item`` to add a second zone, and set these parameters for Zone 2:
@@ -69,6 +70,7 @@ Reverse name resolution on terminals might not work for networks that are inside
 * [systemitem]``192.168.0.0/16``
 
 If you encounter this problem, go to the [guimenu]``Options`` section of the Bind formula, and click btn:[Add item]:
+
 * In the [guimenu]``Options`` field, enter [systemitem]``empty-zones-enable``.
 * In the [guimenu]``Value`` field, select [systemitem]``No``.
 ====
