--- a/modules/retail/pages/retail-formula-branchnetwork.adoc
+++ b/modules/retail/pages/retail-formula-branchnetwork.adoc
@@ -1,21 +1,22 @@
 [[branch-network-formula]]
 = Branch Network Formula
 
-The branch network formula is used to configure the networking services required by the branch server, including DHCP, DNS, TFTP, PXE, and FTP.
+The Branch Network formula is used to configure the networking services required by the branch server, including DHCP, DNS, TFTP, PXE, and FTP.
 
 The branch server can be configured to use networking in many different ways.
 The most common ways provide either a dedicated or shared LAN for terminals.
 
 
 
-== Set up a branch server with a dedicated LAN
+== Set Up a Branch Server with a Dedicated LAN
 
 In this configuration, the branch server requires at least two network interfaces: one acts as a WAN to communicate with the {susemgr} server, and the other one acts as an isolated LAN to communicate with terminals.
 
-This configuration allows for the branch server to provide DHCP, DNS, TFTP, PXE and FTP services to terminals, which are configured through {smr} formulas in the {susemgr} {webui}.
+This configuration allows for the branch server to provide DHCP, DNS, TFTP, PXE, and FTP services to terminals.
+These services can be configured with {smr} formulas in the {susemgr} {webui}.
 
 
-.Procedure: Setting up a branch server with a dedicated LAN
+.Procedure: Setting Up a Branch Server with a Dedicated LAN
 
 . In the {susemgr} {webui}, open the details page for the branch server, and navigate to the [guimenu]``Formulas`` tab.
 . In the [guimenu]``Branch Network`` section, set these parameters:
