Remove exmaple formula

--- a/modules/salt/nav-salt-guide.adoc
+++ b/modules/salt/nav-salt-guide.adoc
@@ -11,7 +11,7 @@ ifndef::backend-pdf[]
 ** xref:salt-formulas.adoc[Salt Formulas]
 *** xref:salt-formulas-standard.adoc[Standard Formulas]
 *** xref:salt-formulas-custom.adoc[Custom Formulas]
-*** xref:salt-example-formula.adoc[Example Custom Formula]
+//*** xref:salt-example-formula.adoc[Example Custom Formula]
 ** xref:salt-ssh.adoc[SSH Integration]
 ** xref:salt-rate-limiting.adoc[Rate Limiting]
 ** xref:large-scale.adoc[Scaling Salt Minions]
