--- a/modules/salt/nav-salt-guide.adoc
+++ b/modules/salt/nav-salt-guide.adoc
@@ -12,7 +12,7 @@ ifndef::backend-pdf[]
 *** xref:salt-formulas-standard.adoc[Standard Formulas]
 *** xref:salt-formulas-custom.adoc[Custom Formulas]
 //*** xref:salt-example-formula.adoc[Example Custom Formula]
-** xref:salt-ssh.adoc[SSH Integration]
+** xref:salt-ssh.adoc[Salt SSH]
 ** xref:salt-rate-limiting.adoc[Rate Limiting]
 ** xref:large-scale.adoc[Scaling Salt Minions]
 *** xref:large-scale-tuning.adoc[Tuning Large Scale Installations]
